# embedding-model-compare

./: README.md  breakfast.py  eval.py  ingest.py  pyproject.toml
