[project]
name = "embedding-model-compare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jinaai>=0.2.10",
    "matplotlib>=3.10.3",
    "openai>=1.91.0",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=4.1.0",
]
